crates/kdl-config-derive/tests/ui/enum_variant_unknown_attr.rs
use kdl_config_derive::KdlNode;

#[derive(KdlNode)]
enum Bad {
    #[kdl(foo)]
    Value,
}

fn main() {}
